# test_repository

./: .env.example  README.md  environment.yml  pyproject.toml
configs/: train_cpu.yaml  train_lora.yaml
ksef_vision/data/: loader.py  utils.py
ksef_vision/evaluation/: metrics.py
ksef_vision/mapping/: fa3_mapper.py  validator.py
ksef_vision/models/: layoutlmv3_ft.py  layoutlmv3_lora.py  loayoutlmv3_lora.py
scripts/: convert_katana.py  generate_xml.py  train.py  train_lora.py  train_smoke.py
